# pdfsearch-zed

./: .gitignore  Cargo.toml  README.md  extension.toml
pdf_rag/: .env  README.md  pyproject.toml
pdf_rag/src/pdf_rag/: __init__.py  env.py  rag.py  server.py
src/: lib.rs
