[project]
name = "pdf_rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "libsql-experimental>=0.0.41",
    "mcp>=1.1.2",
    "openai>=1.58.1",
    "pypdf>=5.1.0",
    "tiktoken>=0.8.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
pdf_rag = "pdf_rag:main"
